# IMGL

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/BasicTabs/: CMakeLists.txt  main.cpp
examples/Basic_Tabs/: CMakeLists.txt  main.cpp
examples/Basic_Window/: CMakeLists.txt  main.cpp
examples/DraggableResizableContainer/: CMakeLists.txt  DraggableResizableContainer.cpp  DraggableResizableContainer.h  main.cpp
examples/Tabs/: CMakeLists.txt
examples/TextEditBox/: CMakeLists.txt  TextEditBox.cpp  TextEditBox.h  main.cpp
include/: Application.h  Clickable.h  Container.h  Input.h  Interactable.h  MainWindow.h  Primitives.h  Render.h  Shader.h  Style.h  Text.h  Window.h
shaders/: quad.frag  quad.geom  quad.vert  text.frag  tri.frag  tri.vert
src/: Application.cpp  CMakeLists.txt  Container.cpp  Input.cpp  Interactable.cpp  MainWindow.cpp  Primitives.cpp  Render.cpp  Shader.cpp  Text.cpp  Window.cpp
